# deps-pycrysfml

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  pybuild.py  pybuild.toml  pyproject.toml
repo/CFML/: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  CMakeLists.txt  Cmake_help.inf  README.md  VENDORED_FROM.txt  install_pycrysfml_lin_intel.sh  install_pycrysfml_macos_gfortran.sh  install_pycrysfml_win_intel.bat  make_CrysFML_fpm.bat  make_CrysFML_fpm.sh  make_pycrysfml_win_intel.bat  make_pycyrsfml_mac.sh  make_pycyrsfml_win.bat
repo/CFML/Documents/: Magnetic_Hall_Symbols.txt
repo/CFML/HDF5/: Nexus_Mod.f90
repo/CFML/ODR/: CMakeLists.txt  make_odrpack_sp.bat  make_odrpack_sp.sh
repo/CFML/PythonAPI/: CMakeLists.txt
repo/CFML/PythonAPI/Fortran/: CFML_Wraps.f90  crysfml08lib.f90
repo/CFML/PythonAPI/Python/: cfml_bckpeaks.py  cfml_diffpatt.py  cfml_gspacegroups.py  cfml_ioform.py  cfml_metrics.py  cfml_py_utilities.py  cfml_reflections.py  cfml_scattering_tables.py  cfml_symmetry_tables.py
repo/CFML/Src/: CFML_Atoms.f90  CFML_BVS_Tables.f90  CFML_BckPeaks.f90  CFML_Bonds_Tables.f90  CFML_Diffpatt.f90  CFML_EnBVS.f90  CFML_ExtinCorr.f90  CFML_Geom.f90  CFML_GlobalDeps_Linux_INTEL.f90  CFML_GlobalDeps_MacOs_INTEL.f90  CFML_GlobalDeps_Windows_INTEL.f90  CFML_ILL_Instrm_Data.f90  CFML_IOForm.f90  CFML_KeyCodes.f90  CFML_Keywords_Code_Parser.f90  CFML_Laue.f90  CFML_Maths.f90  CFML_Messages.f90  CFML_Metrics.f90  CFML_Molecules.f90  CFML_Optimization.f90  CFML_Optimization_LSQ.f90  CFML_Powder.f90  CFML_Profiles.f90  CFML_Py_Utilities.f90  CFML_Rational.f90  CFML_Reflections.f90  CFML_SXTAL_Geom.f90  CFML_Scattering_Tables.f90  CFML_Simulated_Annealing.f90  CFML_Strings.f90  CFML_Structure_Factors.f90  CFML_Symmetry_Tables.f90  CFML_Utilities.f90  CFML_Wraps_Utils.f90  CFML_gSpaceGroups.f90  CFML_kvec_Polarimetry.f90  CFML_kvec_Structure_Factors.f90  CFML_kvec_Symmetry.f90  CMakeLists.txt  (+4 more)
repo/CFML/Src/CFML_Atoms/: Atm_Allocating_Atoms.f90  Atm_ChangeList.f90  Atm_ExtendList.f90  Atm_PointList.f90  Atm_RW_Bin_AtmList.f90  Atm_SymmConstr_MomDisp.f90  Atm_Write_AtmList.f90
repo/CFML/Src/CFML_DiffPatt/: DiffP_Add_Patterns.f90  DiffP_BackgPatt.f90  DiffP_ReadPatt_CIF.f90  DiffP_ReadPatt_FREE.f90  DiffP_ReadPatt_Socabim.f90  DiffP_ReadPatt_TimeVar.f90  DiffP_ReadPatterns.f90  DiffP_WritePatterns.f90
repo/CFML/Src/CFML_EnBVS/: EnBVS_CostF.f90
repo/CFML/Src/CFML_EoS/: Eos_Read.f90
repo/CFML/Src/CFML_ExtinCorr/: Ext_ShelxCorr.f90
repo/CFML/Src/CFML_Geom/: Geom_Coordination.f90  Geom_Distances.f90
repo/CFML/Src/CFML_IOForm/: Format_Blocks.f90  Format_CFL.f90  Format_CIF.f90  Format_FST.f90  Format_MCIF.f90  Format_SHX.f90
repo/CFML/Src/CFML_KeyCodes/: KeyCod_GenPar.f90  KeyCod_Molec.f90  KeyCod_WriteInfo.f90  keyCod_Phas.f90
repo/CFML/Src/CFML_Keywords_Code_Parser/: KWC_Deletion.f90  KWC_FillCodes_FAtm.f90  KWC_GetConCodes.f90  KWC_RefCodes.f90  KWC_VStateToAtomPar.f90
repo/CFML/Src/CFML_Laue/: Laue_Allocate.f90  Laue_Geom.f90  Laue_HBin.f90  Laue_Image.f90  Laue_Init.f90  Laue_Instrument.f90  Laue_Output.f90  Laue_PeakFind.f90  Laue_Ref_Calc.f90  Laue_Ref_Gen.f90  Laue_Stereo.f90
repo/CFML/Src/CFML_Maths/: Math_Diagonalize_SH.f90  Math_Equal_Matrix.f90  Math_Modulo_Lat.f90
repo/CFML/Src/CFML_Messages/: Win_Err_Message.f90
repo/CFML/Src/CFML_Metrics/: Metrics_Gen.f90
repo/CFML/Src/CFML_Molecules/: Mol_ReadInfo.f90  Mol_WriteInfo.f90  Mol_to_AtList.f90
repo/CFML/Src/CFML_Optimization_LSQ/: OPT_LSQ_Output.f90
repo/CFML/Src/CFML_Powder/: Pow_IRF.f90  Pow_Lorentz_Absorption.f90  Pow_MicroStructure.f90  Pow_Preferred_Orientation.f90
repo/CFML/Src/CFML_Profiles/: Profile_Finger.f90  Profile_PseudoVoigt.f90  Profile_TCHpVoigt.f90  Profile_TOF_Jorg_Vondreele.f90
repo/CFML/Src/CFML_Py_Utilities/: Py_Utilities_Esmeralda.f90  Py_Utilities_IOForm.f90  Py_Utilities_Patterns.f90  Py_Utilities_Structure_Factors.f90
repo/CFML/Src/CFML_Reflections/: Refl_AsymUnit.f90  Refl_Generate.f90  Refl_H_Absent.f90  Refl_H_Convent.f90  Refl_Init_RefList.f90  Refl_MaxNum.f90  Refl_Write_List.f90
repo/CFML/Src/CFML_SXTAL_Geom/: SXTAL_Angles.f90  SXTAL_PSD.f90  SXTAL_UB.f90
repo/CFML/Src/CFML_Strings/: StringNum.f90  StringReadKey.f90  StringTools.f90
repo/CFML/Src/CFML_Structure_Factors/: SF_Calculations.f90  SF_Create_Tables.f90  SF_Initialize.f90  SF_Scattering_Species.f90  SF_Write_SF.f90
repo/CFML/Src/CFML_Tables/: Tab_Get_ScatterT.f90  Tab_Get_SpgT.f90  Tab_Read_SSG_DBase.f90  Tab_Set_BVST.f90  Tab_Set_ScatterT.f90  Tab_Set_SpgT.f90
repo/CFML/Src/CFML_Utilities/: Utilities_Patterns.f90
repo/CFML/Src/CFML_Wraps_Utils/: Wraps_Utils.f90
repo/CFML/Src/CFML_gSpaceGroups/: gS_Allocate_Opers.f90  gS_Allocate_SpaceG.f90  gS_ApplySO.f90  gS_CheckGener.f90  gS_Get_GenerStr.f90  gS_Get_Hall_Gener.f90  gS_Get_LauePG.f90  gS_Get_Mat_Symb.f90  gS_Get_Mult_OPTable.f90  gS_Get_Oper_Symb.f90  gS_Get_Ops_Gener.f90  gS_Get_Orb_Stabilizer_Constr.f90  gS_Get_Rotations.f90  gS_Get_SubGrp.f90  gS_Get_Symb_Mat.f90  gS_Get_Symb_Oper.f90  gS_Identify_Groups.f90  gS_Init_Procedures.f90  gS_Match_Shubnikov_Grp.f90  gS_Match_Spg3D.f90  gS_Reorder_Oper.f90  gS_Set_SpaceG.f90  gS_Sort_Operator.f90  gS_Spg_Const_Str.f90  gS_Spg_Const_VGen.f90  gS_Symm_Symbols.f90  gS_Write_SpaceG.f90  gS_operator_equal.f90  gS_operator_mult.f90
repo/CFML/Src/CFML_kvec_Structure_Factors/: kStrf_MiV.f90
repo/CFML/Src/CFML_kvec_Symmetry/: ksym_auxsub.f90  ksym_functions.f90  ksym_init.f90  ksym_read.f90  ksym_write.f90
repo/CFML/Testing/: CMakeLists.txt
repo/CFML/cmake/: set_compiler_flags.cmake
repo/CFML/rsp/: gf_debug_con.rsp  gf_debug_win.rsp  gf_release_con.rsp  gf_release_win.rsp  ifort_lin_debug_con.rsp  ifort_lin_debug_win.rsp  ifort_lin_release_con.rsp  ifort_lin_release_win.rsp  ifort_win_debug_con.rsp  ifort_win_debug_win.rsp  ifort_win_release_con.rsp  ifort_win_release_win.rsp  ifx_lin_debug_con.rsp  ifx_lin_release_con.rsp  ifx_win_debug_con.rsp  ifx_win_release_con.rsp
repo/CFML/toml/: fpm_linmac_con.toml  fpm_windows_con.toml  fpm_windows_con_prog.toml
(+526 files in other folders)
