[project]
name = 'crysfml'
dynamic = ['version']
description = 'Python access to the CrysFML2008 crystallographic Fortran library'
#keywords = ['crystallography', 'diffraction', 'fortran', 'python-bindings']
authors = [
  {name = 'Juan Rodríguez-Carvajal', email = 'jrc@ill.fr'},
  {name = 'Javier Gonzalez-Platas', email = 'jplatas@ull.edu.es'},
  {name = 'Nebil Ayape Katcho', email = 'katcho@ill.fr'}
]
maintainers = [
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Fortran',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.11,<3.15'
dependencies = [
  'numpy',
]

[project.urls]
#Homepage = 'https://github.com/easyscience/deps-pycrysfml'
#Repository = 'https://github.com/easyscience/deps-pycrysfml'
#Issues = 'https://github.com/easyscience/deps-pycrysfml/issues'
License = 'https://github.com/easyscience/deps-pycrysfml/blob/master/LICENSE'
'Upstream CrysFML' = 'https://code.ill.fr/scientific-software/CrysFML2008'

[project.optional-dependencies]
ci = [
  'toml',  # pybuild.py currently imports toml rather than tomllib
  'validate-pyproject[all]',
  'build',
  'wheel',
  'packaging',
  'check-wheel-contents',
  'colorama'
]
test = [
  'deepdiff',
  'pytest',
  'pytest-benchmark',
  'pygit2',
  'matplotlib'
]

[build-system]
requires = ['hatchling', 'versioningit']
build-backend = 'hatchling.build'

[tool.hatch.version]
source = 'versioningit'

[tool.versioningit.format]
distance = '{base_version}+dev{distance}'
dirty = '{base_version}+dirty{distance}'
distance-dirty = '{base_version}+devdirty{distance}'

[tool.versioningit.vcs]
method = 'git'
match = ['v*']
default-tag = 'v0.0.0'

[tool.hatch.build.targets.wheel]
packages = ['dist/pyCFML/crysfml']
artifacts = ['*.py', '*.so', '*.so.*', '*.dylib', '*.pyd', '*.dll', '*.txt']
