[project]
name = 'crysfml'
dynamic = ['version']
description = 'Python access to the CrysFML2008 crystallographic Fortran library'
#keywords = ['crystallography', 'diffraction', 'fortran', 'python-bindings']
authors = [
  {name = 'Juan Rodríguez-Carvajal'},
  {name = 'Javier Gonzalez-Platas'},
  {name = 'Nebil Ayape Katcho'}
]
maintainers = [
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
readme = 'README.md'
license = 'LicenseRef-LGPL-3.0-or-later-with-ILL-no-military-use'
license-files = ['LICENSE']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Fortran',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.11,<3.15'
dependencies = [
  'numpy',
]

[project.urls]
#Homepage = 'https://github.com/easyscience/deps-pycrysfml'
#Repository = 'https://github.com/easyscience/deps-pycrysfml'
#Issues = 'https://github.com/easyscience/deps-pycrysfml/issues'
License = 'https://github.com/easyscience/deps-pycrysfml/blob/master/LICENSE'
'Upstream CrysFML' = 'https://code.ill.fr/scientific-software/CrysFML2008'

[project.optional-dependencies]
ci = [
  'toml',  # pybuild.py currently imports toml rather than tomllib
  'validate-pyproject[all]',
  'build',
  'wheel',
  'packaging',
  'check-wheel-contents',
  'colorama'
]
test = [
  'deepdiff',
  'pytest',
  'pygit2',
  'matplotlib'
]

[build-system]
requires = ['scikit-build-core>=0.11', 'versioningit']
build-backend = 'scikit_build_core.build'

[tool.scikit-build]
minimum-version = 'build-system.requires'
experimental = true
cmake.version = 'CMakeLists.txt'
wheel.packages = []

[tool.scikit-build.metadata.version]
provider = 'crysfml_version'
provider-path = 'tools'

[tool.cibuildwheel.linux]
archs = ['x86_64']
manylinux-x86_64-image = 'manylinux2014'
before-all = [
  'yum install -y gcc-gfortran git',
]
repair-wheel-command = 'auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}'

[tool.cibuildwheel.macos]
archs = ['arm64']
repair-wheel-command = 'delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'

[tool.cibuildwheel.windows]
archs = ['AMD64']
before-build = 'pip install delvewheel'
repair-wheel-command = 'delvewheel repair -w {dest_dir} {wheel}'

[tool.versioningit.format]
distance = '{base_version}+dev{distance}'
dirty = '{base_version}+dirty{distance}'
distance-dirty = '{base_version}+devdirty{distance}'

[tool.versioningit.vcs]
method = 'git'
match = ['v*']
default-tag = 'v0.0.0'
